<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">TechnionRanker</string>
    <string name="action_settings">Settings</string>
    <string name="menu_settings">Settings</string>
    <string name="search_hint">Search for Professors and Courses.</string>
    <string name="title_activity_expandable_list">ExpandableList Demo</string>
    <string android:id="@+id/string1" name="string1" android:layout_height="">Welcome to the TechnionRanker.</string>
    <string android:id="@+id/string2" name="string2" android:layout_width="wrap_content" android:layout_height="wrap_content">Please search for your professors or courses to begin.</string>
    <string android:id="@+id/string3" name="string3" android:layout_width="wrap_content" android:layout_height="wrap_content">Want to rate you your professors and classes?</string>
    <string android:id="@+id/string4" name="string4" android:layout_width="wrap_content" android:layout_height="wrap_content">Log in</string>
    <string android:id="@+id/string5" name="string5" android:layout_width="wrap_content" android:layout_height="wrap_content">Log out</string>
    <string android:id="@+id/string6" name="string6" android:layout_width="wrap_content" android:layout_height="wrap_content">Home</string>
    <string android:id="@+id/string7" name="string7" android:layout_width="wrap_content" android:layout_height="wrap_content">Tom Smith</string>
    <string android:id="@+id/string8" name="string8" android:layout_width="wrap_content" android:layout_height="wrap_content">Sumbit</string>
    <string android:id="@+id/string9" name="string9" android:layout_width="wrap_content" android:layout_height="wrap_content">Hello visiter!</string>
    <string android:id="@+id/string10" name="string10" android:layout_width="wrap_content" android:layout_height="wrap_content">Welcome to the TechnionRanker.</string>
    <string android:id="@+id/string11" name="string11" android:layout_width="wrap_content" android:layout_height="wrap_content">Database Systems</string>
    <string android:id="@+id/string12" name="string12" android:layout_width="wrap_content" android:layout_height="wrap_content">584698</string>
    <string name="password">UG Password</string>
    <string name="OperatingSystems">Operating Systems</string>
    <string name="OperatingSystemsnum">234123</string>
    <string name="Professor">Tom Smith</string>
    <string name="action_logout">Logout</string>
    <string name="action_search">Search</string>
    <string name="username">UG Username</string>
    <string name="search">Course, Professor, or Faculty</string>
    <string name="desc"></string>
    <string android:id="@+id/blank" name="blank" android:layout_width="wrap_content" android:layout_height="wrap_content"></string>

    <string-array name="course_array">
        <item>Database Managment</item>
        <item>Math</item>
        <item>Robotics</item>
        <item>Computing</item>
    </string-array>

    <color name="silver">#C0C0C0</color>
    <color name ="red">#FF0000</color>
    <color name="gray">#808080</color>
    <color name="white">#FFFFFF</color>
    <color name="black">#000000</color>
    <color name="blueish">#680000</color>
    <color name="LoginBorderColor">#DD7500</color>

    <string-array name="search_results_array">
        <item>Tom Smith</item>
        <item>Robotics</item>
        <item>James Moore</item>
        <item>Project in Software</item>
        <item>Jason Wilson</item>
    </string-array>

    <string name="search_view1">Results</string>
    <string name="enjoyability">Enjoyability </string>
    <string name="usefulness">Usefulness  </string>
    <string name="overall">Usefulness  </string>
    <string name="difficulty">Difficulty      </string>
    <string name="commentHint">Comment&#3280;</string>
    <string name="submit">Submit</string>
    <string name="interactivity">Interactivity    </string>
    <string name="preparedness">Preparedness</string>
    <string name="clarity">Clarity            </string>
    <string name="professorOverall">Overall            </string>
    <string name="professorSubmit">Submit</string>
    <string name="professorCommentHint">Comment&amp;#8230;</string>

</resources>