<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:fillViewport="true" >
    
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="400dp"
	    android:layout_gravity="center"
	    android:background="@color/black"
	    android:orientation="vertical" >

		<TextView
		    android:id="@+id/textView2"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="35dp"
		    android:layout_marginTop="25dp"
		    android:text="@string/string1"
		    android:textAppearance="?android:attr/textAppearanceMedium"
		    android:textColor="@color/white" />

		<TextView
		    android:id="@+id/textView1"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="35dp"
		    android:layout_marginRight="10dp"
		    android:layout_marginTop="10dp"
		    android:text="@string/string2"
		    android:textAppearance="?android:attr/textAppearanceMedium"
		    android:textColor="@color/white" />

		<SearchView
		    android:id="@+id/searchView130"
		    android:layout_width="235dp"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="35dp"
		    android:layout_marginTop="20dp"
		    android:background="@color/gray" >
		</SearchView>
	
	    <TextView
	        android:id="@+id/textView3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="35dp"
	        android:layout_marginRight="35dp"
	        android:layout_marginTop="20dp"
	        android:text="@string/string3"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textColor="@color/white" />
	
	    <EditText
	        android:id="@+id/editText2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:layout_marginTop="20dp"
	        android:background="@drawable/login"
	        android:ems="10"
	        android:hint="@string/username"
	        android:inputType="textPassword"
	        android:textColorLink="@color/LoginBorderColor" 
			android:textColorHint="@color/LoginBorderColor">
	    	<requestFocus />
	    </EditText>
	    
	    <EditText
	        android:id="@+id/editText1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:layout_marginTop="20dp"
	        android:background="@drawable/login"
	        android:ems="10"
	        android:hint="@string/password"
	        android:inputType="textPassword"
	        android:textColorHint="@color/LoginBorderColor" >

	        <requestFocus />
	    </EditText>
	
	    <Button
            android:id="@+id/button10"
            android:layout_width="215dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="18dp"
            android:background="@color/LoginBorderColor"
            android:text="@string/string4"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textColorLink="@color/black" />
	
	</LinearLayout>
	
</ScrollView>	