<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/black" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="260dp"
            android:background="@color/black"
            android:orientation="vertical" >

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.1dp"
                android:background="@android:color/white" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/professorNameText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/Professor"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/white" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.1dp"
                android:background="@android:color/white" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp" >

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:paddingTop="12dp"
                    android:text="@string/professorOverall"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/white" />

                <RatingBar
                    android:id="@+id/professorRatingBarOverall"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_gravity="right"
                    android:layout_marginRight="20dp"
                    android:numStars="@integer/three" />

            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.1dp"
                android:background="@android:color/white" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:paddingTop="12dp"
                    android:text="@string/clarity"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/white" />

                <RatingBar
                    android:id="@+id/professorRatingBarClarity"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_gravity="right"
                    android:layout_marginRight="20dp"
                    android:numStars="@integer/three" />

            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.1dp"
                android:background="@android:color/white" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:paddingTop="12dp"
                    android:text="@string/preparedness"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/white" />

                <RatingBar
                    android:id="@+id/professorRatingBarPreparedness"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_gravity="right"
                    android:layout_marginRight="20dp"
                    android:numStars="@integer/three" />

            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.1dp"
                android:background="@android:color/white" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:paddingTop="12dp"
                    android:text="@string/interactivity"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/white" />

                <RatingBar
                    android:id="@+id/professorRatingBarInteractivity"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_gravity="right"
                    android:layout_marginRight="20dp"
                    android:numStars="@integer/three" />
                
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.1dp"
                android:layout_marginBottom="5dp"
                android:background="@android:color/white" />
                                <Button
                    android:id="@+id/professorRatingButton"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:background="@color/LoginBorderColor"
                    android:orientation="horizontal"
                    android:shadowColor="@android:color/black"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="1"
                    android:text="@string/professorSubmit"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
                                
                                                                  <TextView
            android:id="@+id/textViewProfessorRatingSubmitted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:ellipsize="none"
            android:singleLine="true"
            android:text="@string/blank"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/red" />
            <!--  Comment functionality:
            <LinearLayout
                android:id="@+id/third_lin_layout"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_marginBottom="2dp"
                android:layout_weight="0.36"
                android:background="@android:color/white" >

                <EditText
                    android:id="@+id/professorComment"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:hint="@string/professorCommentHint" >
                </EditText>

                <Button
                    android:id="@+id/professorCommentButton"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:background="@color/LoginBorderColor"
                    android:orientation="horizontal"
                    android:shadowColor="@android:color/black"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="1"
                    android:text="@string/professorSubmit"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
<Button
            android:id="@+id/button1"
            android:layout_width="215dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="18dp"
            android:background="@color/LoginBorderColor"
            android:text="@string/string4"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textColorLink="@color/black" />
            </LinearLayout>
            -->
        </LinearLayout>
    </ScrollView>